@@ -3,6 +3,11 @@ ChangeLog
 
 Release: 1.3.2
 ===============================================================================
+2022-04-29 Fixed a crash on Android when a phone call was detected and the
+           internal phone dialog is displayed.
+           Fixed the bargraph to draw the second image if there is no first
+           image.
+
 2022-04-28 Added a system volume control and a system mute control.
            Completed the selection of system sound files, single beep and
            double beep files.
